syntax = "proto3";

package movie;

service MovieService {
  rpc ListMovies (ListMoviesRequest) returns (ListMoviesResponse) {}
  rpc SyncData (SyncDataRequest) returns (SyncDataResponse) {}
  rpc GetMovieShowtimes (GetMovieShowtimesRequest) returns (GetMovieShowtimesResponse) {}
}

message SyncDataRequest {

}

message ListMoviesRequest {
  int32 page = 1;
  int32 limit = 2;
  string sortBy = 3;
  string sortOrder = 4;
}

message Movie {
  string id = 1;
  string title = 2;
  string overview = 3;
  string releaseDate = 4;
  string posterPath = 5;
  string backdropPath = 6;
  double voteAverage = 7;
  int32 voteCount = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message PaginationInfo {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 totalPages = 4;
  bool hasNext = 5;
  bool hasPrev = 6;
}

message ListMoviesResponse {
  repeated Movie movies = 1;
  PaginationInfo pagination = 2;
}

message SyncDataResponse {
  bool success = 1;
  string message = 2;
  repeated string errors = 3;
}

message GetMovieShowtimesRequest {
  string movieId = 1;
}

message MovieShowtimeRoom {
  string id = 1;
  string name = 2;
}

message MovieShowtimeItem {
  string showtimeId = 1;
  MovieShowtimeRoom room = 2;
  string startTime = 3;
  int32 basePrice = 4;
}

message GetMovieShowtimesResponse {
  string movieId = 1;
  string title = 2;
  repeated MovieShowtimeItem showtimes = 3;
}